fix word wrap faq

--- a/src/scss/components/faq.scss
+++ b/src/scss/components/faq.scss
@@ -312,6 +312,7 @@
                         color: #fff;
                         text-transform: uppercase;
                         hyphens: none;
+                        word-wrap: normal;
                     }
                 }
 
